--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -28,4 +28,47 @@
     font-size: 12px;
     line-height: 14px;
   }
+
+  &__bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #fff;
+    height: 119px;
+
+  }
+
+  &__logo {
+    width: 75px;
+    height: 75px;
+  }
+}
+
+.header-nav {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+
+  &__list {
+    display: flex;
+  }
+
+  &__item {
+    text-transform: uppercase;
+
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
+
+    &_active {
+      font-weight: 700;
+    }
+  }
+}
+
+.header-phone {
+  &__link {
+    display: flex;
+    flex-direction: column;
+  }
 }
