--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,4 +6,5 @@
 
 // Подключение компонентов страницы
 @import './components/container';
-@import './components/header'
+@import './components/header';
+@import './components/hero';
