--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -52,3 +52,27 @@ body {
 	margin: 0;
 	padding: 0;
 }
+
+.title {
+	font-style: normal;
+	font-weight: 700;
+	font-size: 32px;
+	line-height: 37px;
+	color: #000000;
+
+	&_white {
+		color: #fff;
+	}
+
+	&_small {
+		font-size: 24px;
+		line-height: 28px;
+	}
+}
+
+.description {
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 29px;
+}
