--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -34,6 +34,7 @@ img {
 body {
 	font-family: 'Asap', sans-serif;
 	margin: 0;
+	background: #F2F2F2;
 }
 
 .btn {
@@ -60,6 +61,8 @@ body {
 	line-height: 37px;
 	color: #000000;
 	text-transform: capitalize;
+	margin: 0;
+	padding: 0;
 
 	&_white {
 		color: #fff;
@@ -69,6 +72,10 @@ body {
 		font-size: 24px;
 		line-height: 28px;
 	}
+
+	&_color-main {
+		color: var(--color-main);
+	}
 }
 
 .description {
@@ -76,4 +83,6 @@ body {
 	font-weight: 400;
 	font-size: 16px;
 	line-height: 29px;
+	margin: 0;
+	padding: 0;
 }
