--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -23,11 +23,26 @@
     width: 350px;
     height: 240px;
     padding: 45px 35px 0;
-    background: #f7f7f7;
+    background-color: #f7f7f7;
+    background-position: 299px 39px;
+    background-repeat: no-repeat;
+    background-size: 33px auto;
 
     // TODO почему один блок другого цвета? Ховер? Но зачем весь блок?..
     &_dark {
-      background: #f3f3f3;
+      background-color: #f3f3f3;
+    }
+
+    &_dependable {
+      background-image: url('../img/icon-shield.svg');
+    }
+
+    &_open {
+      background-image: url('../img/icon-globe.svg');
+    }
+
+    &_connected {
+      background-image: url('../img/icon-connect.svg');
     }
   }
 
