--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -4,4 +4,6 @@ body {
   --color-main: #0e77af;
   --color-red: #b4141b;
   --color-grey: #7d7d7d;
+  --container-width: 1200px;
+  --container-paddind: 15px
 }
