Готова разметка для блока benefits

--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -1,7 +1,7 @@
 .about {
   display: flex;
   justify-content: space-between;
-  padding-top: 85px;
+  margin-bottom: 135px;
 
   &__title {
     margin-bottom: 57px;
