--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   padding-top: 151px;
+  margin-bottom: 85px;
 
   &__content {
     padding-left: 582px;
