--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -38,9 +38,9 @@ body {
 }
 
 .container {
-  max-width: var(--container-width);
-  margin: 0 auto;
-  padding: 0 var(--container-paddind);
+	max-width: var(--container-width);
+	margin: 0 auto;
+	padding: 0 var(--container-padding);
 }
 
 .btn {
@@ -82,6 +82,14 @@ body {
 	&_color-main {
 		color: var(--color-main);
 	}
+}
+
+.subtitle {
+	font-weight: 400;
+	font-size: 24px;
+	line-height: 28px;
+	color: #9B9B9B;
+	text-transform: capitalize;
 }
 
 .description {
