--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -5,5 +5,5 @@ body {
   --color-red: #b4141b;
   --color-grey: #7d7d7d;
   --container-width: 1200px;
-  --container-paddind: 15px
+  --container-padding: 15px;
 }
