--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,3 +9,4 @@
 @import './components/hero';
 @import './components/about';
 @import './components/benefits';
+@import './components/services-security';
