--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -81,7 +81,7 @@ body {
 		color: #fff;
 	}
 
-	&_small {
+	&_h3 {
 		font-size: 24px;
 		line-height: 28px;
 	}
@@ -108,4 +108,8 @@ body {
 	line-height: 29px;
 	margin: 0;
 	padding: 0;
+}
+
+.text-transform-none {
+	text-transform: none;
 }
