добавил в _settings.scss класс .wrapper-relative

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -113,3 +113,8 @@ body {
 .text-transform-none {
 	text-transform: none;
 }
+
+.wrapper-relative {
+	// Для секций, содержащих контейнер, но в которых есть элементы position absolute
+	position: relative;
+}
