начал секцию testimonials

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,3 +10,4 @@
 @import './components/about';
 @import './components/benefits';
 @import './components/services-security';
+@import './components/testimonials';
