начал секцию Appointment. Готова левая часть.

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,3 +11,4 @@
 @import './components/benefits';
 @import './components/services-security';
 @import './components/testimonials';
+@import './components/appointment';
