--- a/src/scss/components/_appointment.scss
+++ b/src/scss/components/_appointment.scss
@@ -1,5 +1,9 @@
 .appointment {
-  padding-top: 179px;
+  padding-top: 125px;
+
+  &__content {
+    padding-top: 54px;
+  }
 
   &__article {
     margin-bottom: 29px;
@@ -19,5 +23,39 @@
 
   &__item:not(:last-child) {
     margin-bottom: 11px;
+  }
+}
+
+.appo-form {
+  display: flex;
+  flex-direction: column;
+  padding: 54px 40px 52px 48px;
+
+  &__title {
+    margin-bottom: 46px;
+  }
+
+  &__input {
+    height: 53px;
+    padding: 0 11px;
+
+    &:not(:last-of-type) {
+      margin-bottom: 37px;
+    }
+    &:last-of-type {
+      margin-bottom: 40px;
+    }
+
+    &::placeholder {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 16px;
+      color: #4a4a4a;
+    }
+  }
+
+  &__buttons {
+    display: flex;
+    justify-content: end;
   }
 }
