--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,4 @@
 @import './components/services-security';
 @import './components/testimonials';
 @import './components/appointment';
+@import './components/footer';
