--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -2,30 +2,50 @@
   background-color: #4a4a4a;
   color: #fff;
 
-  &__address {
-    background-color: #5f5f5f;
-  }
-
-  &__call {
-    background-color: #6c6c6c;
-  }
-
-  &__write {
-    background-color: #7b7b7b;
-  }
-}
-
-.footer-contacts {
-  display: flex;
-  transform: translateY(-50%);
-  &__item {
-    flex: 1 0 10%;
-    padding: 40px 66px;
-    height: 196px;
-  }
-
   &__title {
     color: #fff;
     margin-bottom: 11px;
+  }
+
+  &__contacts {
+    display: flex;
+    transform: translateY(-50%);
+  }
+
+  &__contact {
+    flex-grow: 1;
+    padding: 40px 66px;
+    height: 196px;
+
+    &_address {
+      background-color: #5f5f5f;
+      background-image: url("../img/icon-address.svg");
+      background-size: auto;
+      background-position: 15px 50%;
+      background-repeat: no-repeat;
+    }
+
+    &_call {
+      background-color: #6c6c6c;
+      padding-left: 71px;
+      background-image: url("../img/icon-phone.svg");
+      background-size: auto;
+      background-position: 15px 50%;
+      background-repeat: no-repeat;
+    }
+
+    &_write {
+      background-color: #7b7b7b;
+      padding-left: 74px;
+      background-image: url("../img/icon-email.svg");
+      background-size: auto;
+      background-position: 15px 50%;
+      background-repeat: no-repeat;
+    }
+  }
+
+  &__contact:first-child,
+  &__contact:last-child {
+    max-width: 380px;
   }
 }
