Правки в хедере: ссылки на соц сети; z-index для .header__nav

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -14,14 +14,14 @@
     }
   }
 
+  &__social-link:not(:last-child) {
+    margin-right: 18px;
+  }
+
   &_svg {
     fill: #fff;
     width: 16px;
     height: 16px;
-
-    &:not(:last-child) {
-      margin-right: 18px;
-    }
   }
 
   &_email {
@@ -36,6 +36,11 @@
     background: #fff;
     height: 119px;
     position: relative;
+  }
+
+  &__link,
+  &-contacts {
+    z-index: 3;
   }
 
   &__logo {
