Добавил :hover и :focus везде.

--- a/src/scss/components/_benefits.scss
+++ b/src/scss/components/_benefits.scss
@@ -37,6 +37,11 @@
       background-color: #fff;
       color: #000;
     }
+
+    &:focus {
+      outline: 3px solid #000;
+    }
+
     &:hover {
       background-color: #fff;
       color: #000;
