--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -69,8 +69,18 @@ blockquote {
 
 .btn-colored {
 	background-color: var(--color-red);
-	border-color: var(--color-red);
+	border: 1px solid transparent;
 	color: #fff;
+
+	&:focus {
+		outline: 2px solid #000;
+	}
+
+	&:hover {
+		background-color: transparent;
+		border: 1px solid var(--color-red);
+		color: var(--color-red);
+	}
 }
 
 .btn-link {
@@ -81,8 +91,13 @@ blockquote {
 	color: var(--color-grey);
 	text-transform: uppercase;
 
+	&:focus {
+		outline: 2px solid var(--color-main);
+	}
+
 	&:hover {
 		text-decoration: underline;
+		color: var(--color-red);
 	}
 }
 
@@ -128,6 +143,8 @@ blockquote {
 	margin: 0;
 	padding: 0;
 }
+
+
 
 .text-transform-none {
 	text-transform: none;
