--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -20,6 +20,17 @@
     margin-bottom: 13px;
   }
 
+  &-contacts {
+    &__value {
+      &:focus {
+        outline: 2px solid #000;
+      }
+      &:hover {
+        color: #000;
+      }
+    }
+  }
+
   &__contact {
 
     padding: 40px 66px;
@@ -65,6 +76,16 @@
     padding-left: 71px;
   }
 
+  &__link a {
+    &:focus {
+      outline: 2px solid #000;
+    }
+
+    &:hover {
+      color: black;
+    }
+  }
+
   &__social {
     padding-left: 60px;
   }
@@ -77,10 +98,23 @@
     fill: #fff;
     width: 40px;
     height: 40px;
+    transition: all 0.1s ease-in-out;
   }
 
-  &__social-link:not(:last-child) {
-    margin-right: 30px;
+  &__social-link {
+    display: inline-block;
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+
+    &:hover .footer__icon {
+      transform: scale(115%);
+    }
+
+    &:focus {
+      outline: 3px solid var(--color-main);
+    }
   }
 
   &__copyright {
