--- a/src/scss/components/_services-security.scss
+++ b/src/scss/components/_services-security.scss
@@ -15,13 +15,21 @@
     position: relative;
     border-bottom: 1px solid #979797;
     padding-bottom: 24px;
+
+    &:focus {
+      outline: 2px solid var(--color-main);
+    }
+
+    &:hover {
+      cursor: pointer;
+    }
   }
   &__summary::-webkit-details-marker {
     display: none;
   }
 
   &__details > summary::after {
-    content: "";
+      content: "";
       position: absolute;
       top: 6px;
       right: 0;
@@ -61,6 +69,10 @@
     height: initial;
     text-align: left;
     line-height: 100%;
+
+    &:focus {
+      outline: 2px solid var(--color-main);
+    }
   }
 }
 
