в блоке .services-summary поменял :focus на :focus-visible

--- a/src/scss/components/_services-security.scss
+++ b/src/scss/components/_services-security.scss
@@ -16,7 +16,7 @@
     border-bottom: 1px solid #979797;
     padding-bottom: 24px;
 
-    &:focus {
+    &:focus-visible {
       outline: 2px solid var(--color-main);
     }
 
