Исправления по результатам build-версии сборки и проверки валидаторами HTML и CSS

--- a/src/scss/components/_services-security.scss
+++ b/src/scss/components/_services-security.scss
@@ -37,7 +37,7 @@
       width: 18px;
       background-image: url("../img/details-plus.svg");
       background-position: center;
-      background-size: center;
+      background-size: auto;
       background-repeat: no-repeat;
   }
 
